menghapus kolom/relasi user_id pada pendaftaran dan antrian, dan menghapus jenis pendaptaran
